--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -1,7 +1,7 @@
 @import 'src/styles/common';
 
 .projects {
-    padding: 5em 0 3em 0;
+    padding-top: 8em;
     background-color: var(--color-white);
     
     .projectsWrapper {
