--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -8,7 +8,7 @@
   width: 100%;
   height: 80px;
   
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
 
@@ -17,6 +17,10 @@
   box-shadow: 0 1px 10px 1px var(--shadow-navbar);
   opacity: 0;
   transition: opacity 0.3s ease;
+
+  @include respond-above(xs) {
+    display: flex;
+  }
 
   &.visible {
     opacity: 1;
