--- a/src/components/ui/ProgressBar/ProgressBar.module.scss
+++ b/src/components/ui/ProgressBar/ProgressBar.module.scss
@@ -25,8 +25,12 @@
         transition: width 1.5s ease-out;
 
         &.primary {
-            box-shadow: 0 10px 40px -10px var(--primary);
-            background: var(--primary);
+            box-shadow: 0 10px 40px -10px var(--color-primary);
+            background: var(--color-primary);
+        }
+        &.secondary {
+            box-shadow: 0 10px 40px -10px var(--color-secondary);
+            background: var(--color-secondary);
         }
         &.danger {
             box-shadow: 0 10px 40px -10px var(--color-danger);
