--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -15,31 +15,20 @@
   
   .btn {
     position: relative;
-    display: inline-block;
-    padding: 10px 30px;
-    text-decoration: none;
+    padding: 0.8em 1.2em;
+    font-size: 1em;
+    font-weight: 700;
+    color: var(--color-primary);
+    background-color: transparent;
+    border: 2px solid var(--color-primary);
+    border-radius: 8px;
     text-transform: uppercase;
-    font-size: 18px;
-    font-weight: 500;
-    border-radius: 40px;
-    color: var(--primary);
-    letter-spacing: 2px;
-    box-shadow: -2px -2px 8px rgba(255, 255, 255, 1),
-      -2px -2px 12px rgba(255, 255, 255, 0.5),
-      inset 2px 2px 4px rgba(255, 255, 255, 0.1), 2px 2px 8px rgba(0, 0, 0, 0.15);
-    transition: all 0.2s linear;
+    cursor: pointer;
+    transition: color 0.22s ease, border 0.22s ease;
   
     &:hover {
-      color: var(--primary);
-      box-shadow: inset -2px -2px 8px rgba(255, 255, 255, 1),
-        inset -2px -2px 12px rgba(255, 255, 255, 0.5),
-        inset 2px 2px 4px rgba(255, 255, 255, 0.1),
-        inset 2px 2px 8px rgba(0, 0, 0, 0.15);
-    }
-  
-    &:hover span {
-      display: inline-block;
-      transform: scale(0.98);
+      color: var(--color-primary-light);
+      border-color: var(--color-primary-light);
     }
   }
   
