change footer color

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -24,7 +24,7 @@
     
     --color-secondary: #1db199;
     --color-secondary-light: #49f9db;
-    --color-secondary-dark: #1b986a;
+    --color-secondary-dark: #1a7466;
 
     --color-white: #f5f5f5;
     --color-black: #000;
