--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -3,7 +3,7 @@
 
   .section {
     padding: 5em 1.5em 6em 1.5em;
-    background-color: var(--color-secondary);
+    background-color: var(--color-secondary-dark);
 
     h2 {
       padding: 0;
@@ -16,7 +16,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: #fff;
+    color: var(--color-white);
     margin-bottom: 4em;
 
     h2 {
@@ -33,25 +33,13 @@
   }
 
   .details {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    grid-gap: 0.2em;
-    color: #fff;
     transition: all 400ms ease-in-out;
-    font-size: 1.4rem;
 
     &:hover {
-      transform: translateY(8px);
-      color: #fff;
-  
-      path {
-        fill: #777;
-      }
-    }
+      transform: translateY(5px);
+      
 
-    svg {
-      margin-right: 10px;
+      
     }
   }
 
