--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -14,7 +14,8 @@
 
   background-color: var(--background-navbar);
   z-index: 100;
-  box-shadow: 0 1px 10px 1px var(--shadow-navbar);
+  border-bottom: 1px solid var(--color-toggle-dark);
+  // box-shadow: 0 1px 10px 1px var(--shadow-navbar);
   opacity: 0;
   transition: opacity 0.3s ease;
 
