--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -26,7 +26,7 @@
     --color-secondary-light: #49f9db;
     --color-secondary-dark: #1a7466;
 
-    --color-white: #f5f5f5;
+    --color-white: rgb(245, 245, 245);
     --color-black: #000;
     --color-light: #afaeae;
     --color-dark: rgb(69, 68, 68);
@@ -44,7 +44,7 @@
     --color-success: rgb(24, 220, 73);
     --color-info: rgb(90, 123, 214);
 
-    --background-navbar: var(--color-white);
+    --background-navbar: rgb(245, 245, 245, 0.96);
     --shadow-navbar: rgba(0, 0, 0, 0.3);
     
     // SHADOWS
@@ -55,9 +55,10 @@
     .app {
         --color-primary: var(--color-primary-light);
         
-        --background-navbar: #1c2936;
+        --background-navbar: rgb(28, 41, 54, 0.96);
         --shadow-navbar: rgb(200, 200, 200, 0.3);
 
         --color-toggle-gray-dark: #ddd;
+        --color-toggle-dark: #fff;
     }
   }
