--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -32,7 +32,7 @@
     --color-dark: rgb(69, 68, 68);
 
     --color-toggle-light: #fff;
-    --color-toggle-dark: #000;
+    --color-toggle-dark: rgb(146, 132, 132);
     --color-toggle-gray-dark: #555;
 
     --color-gray: #555;
@@ -59,6 +59,6 @@
         --shadow-navbar: rgb(200, 200, 200, 0.3);
 
         --color-toggle-gray-dark: #ddd;
-        --color-toggle-dark: #fff;
+        --color-toggle-dark: rgb(144, 136, 136);
     }
   }
