--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -41,14 +41,14 @@
     }
 
     .link {
-      color: var(--color-gray-light);
+      color: var(--color-toggle-gray);
       font-size: 1.2rem;
       font-weight: 700;
       text-transform: uppercase;
       transition: color 0.3s ease;
 
       &:hover {
-        color: var(--color-gray);
+        color: var(--color-toggle-gray-light);
       }
     }
   }
