--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -125,8 +125,8 @@
     }
 
     &:hover {
-      color: var(--color-primary);
-      border-color: var(--color-primary);
+      color: var(--color-primary-dark);
+      border-color: var(--color-primar-darky);
     }
   }
 }
