--- a/src/components/ui/FormControls/TextInput/TextInput.module.scss
+++ b/src/components/ui/FormControls/TextInput/TextInput.module.scss
@@ -10,10 +10,12 @@
         border: 2px solid var(--color-primary-light);
         border-radius: 5px;
         margin-bottom: 1.01em;
+        outline: none;
 
         &:focus,
         &:active {
             border-color: var(--color-primary-dark);
+            outline: none;
         }
         &::placeholder {
             font: inherit;
