--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -20,7 +20,7 @@
 
     --color-primary: #3a22a7;
     --color-primary-dark: #180a55;
-    --color-primary-light: #1597f3;
+    --color-primary-light: #26bde3;
     
     --color-secondary: #1db199;
     --color-secondary-light: #49f9db;
