--- a/src/components/ui/FormControls/TextInput/TextInput.module.scss
+++ b/src/components/ui/FormControls/TextInput/TextInput.module.scss
@@ -7,10 +7,12 @@
     &__input {
         width: 100%;
         padding: 0.5em 0.8em;
-        border: 2px solid var(--color-primary-light);
+        border: 2px solid var(--color-primary);
         border-radius: 5px;
         margin-bottom: 1.01em;
         outline: none;
+        background-color: var(--color-white);
+        color: var(--color-black);
 
         &:focus,
         &:active {
