--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -76,6 +76,7 @@
   position: absolute;
   bottom: 2em;
   left: 50%;
+  opacity: 0.65;
   animation: action 1s infinite alternate;
 
     @keyframes action {
