--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -4,6 +4,7 @@
 
 .about {
     display: flex;
+    min-height: 100vh;
     padding: 4em 0;
     position: relative;
     background-color: var(--color-white);
