--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -15,6 +15,7 @@
   &::before {
     content: '';
     background-image: url("/img/man.jpeg");
+    background-size: cover;
     display: block;
     position: absolute;
     left: 0;
@@ -29,7 +30,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-}
+  }
   @include respond-above(xs) {
     margin-top: -5em;
   }
@@ -75,7 +76,7 @@
       color: var(--color-primary);
         
       @include respond-above(sm) {
-        color: transparent;
+        color: var(--color-primary-light);
         font-size: 5rem;
         -webkit-text-stroke: 4px var(--color-primary);
         text-stroke: 4px var(--color-primary);
