--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,51 +1,51 @@
 .app {
-    --color-primary: hsl(250, 65%, 40%);
-    --color-primary-dark: hsl(250, 65%, 20%);
-    --color-primary-light: hsl(250, 65%, 70%);
-    
-    --color-secondary: hsl(170, 72%, 40%);
-    --color-secondary-light: hsl(170, 94%, 63%);
-    --color-secondary-dark: hsl(171, 63%, 28%);
+  --color-primary: hsl(250, 65%, 40%);
+  --color-primary-toggle: var(--color-primary);
+  --color-primary-dark: hsl(250, 65%, 20%);
+  --color-primary-light: hsl(250, 65%, 70%);
 
-    --color-white: hsl(0, 0%, 100%);
-    --color-black: hsl(0, 0%, 0%);
-    --color-light: hsl(0, 0%, 70%);
-    --color-light-transparent: hsla(0, 0%, 70%, 0.2);
-    --color-dark: hsl(0, 0%, 27%);
+  --color-secondary: hsl(170, 70%, 40%);
+  --color-secondary-light: hsl(170, 70%, 63%);
+  --color-secondary-dark: hsl(170, 70%, 28%);
 
-    --color-toggle-light: hsl(0, 0%, 100%);
-    --color-toggle-dark: hsl(0, 0%, 50%);
-    --color-toggle-gray-dark: var(--color-dark);
+  --color-white: hsl(0, 0%, 100%);
+  --color-black: hsl(0, 0%, 0%);
+  --color-light: hsl(0, 0%, 70%);
+  --color-light-transparent: hsla(0, 0%, 70%, 0.2);
+  --color-dark: hsl(0, 0%, 27%);
 
-    --color-gray: hsl(0, 0%, 33%);
-    --color-gray-light: hsl(0, 0%, 67%);
-    --color-toggle-gray: var(--color-gray);
-    --color-toggle-gray-light: var(--color-gray-light);
+  --color-toggle-light: hsl(0, 0%, 100%);
+  --color-toggle-dark: hsl(0, 0%, 50%);
+  --color-toggle-gray-dark: var(--color-dark);
 
+  --color-gray: hsl(0, 0%, 33%);
+  --color-gray-light: hsl(0, 0%, 67%);
+  --color-toggle-gray: var(--color-gray);
+  --color-toggle-gray-light: var(--color-gray-light);
 
-    --color-danger: hsl(0, 85%, 60%);
-    --color-warning: hsl(60, 85%, 60%);
-    --color-success: hsl(135, 85%, 50%);
-    --color-info: hsl(225, 85%, 60%);
+  --color-danger: hsl(0, 85%, 60%);
+  --color-warning: hsl(60, 85%, 60%);
+  --color-success: hsl(135, 85%, 50%);
+  --color-info: hsl(225, 85%, 60%);
 
-    --background-navbar: hsla(0, 0%, 90%, 0.9);
-    --shadow-navbar: hsla(0, 0%, 0%, 0.3);
-    
-    // SHADOWS
-    --card-shadow: hsla(0, 0%, 0%, 0.3);
+  --background-navbar: hsla(0, 0%, 90%, 0.9);
+  --shadow-navbar: hsla(0, 0%, 0%, 0.3);
+
+  // SHADOWS
+  --card-shadow: hsla(0, 0%, 0%, 0.3);
 }
 
 @media (prefers-color-scheme: dark) {
-    .app {
-        // --color-primary: var(--color-primary-light);
-        
-        --background-navbar: hsla(210, 30%, 20%, 0.9);
-        --shadow-navbar: hsla(0, 0%, 78%, 0.3);
+  .app {
+    --color-primary-toggle: var(--color-primary-light);
 
-        --color-toggle-gray-dark: hsl(0, 0%, 87%);
-        --color-toggle-dark: hsl(0, 3%, 55%);
-  
-        --color-toggle-gray: hsl(0, 19%, 83%);
-        --color-toggle-gray-light: hsl(0, 5%, 59%);
-    }
+    --background-navbar: hsla(210, 30%, 20%, 0.9);
+    --shadow-navbar: hsla(0, 0%, 78%, 0.3);
+
+    --color-toggle-gray-dark: hsl(0, 0%, 87%);
+    --color-toggle-dark: hsl(0, 3%, 55%);
+
+    --color-toggle-gray: hsl(0, 19%, 83%);
+    --color-toggle-gray-light: hsl(0, 5%, 59%);
   }
+}
