--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,6 +1,6 @@
-@import 'src/styles/colors';
-@import 'src/styles/breakpoints';
-@import 'src/styles/common';
+@import "src/styles/colors";
+@import "src/styles/breakpoints";
+@import "src/styles/common";
 
 .header {
   height: 100vh;
@@ -13,7 +13,7 @@
   grid-gap: 3.2em;
 
   &::before {
-    content: '';
+    content: "";
     position: absolute;
     left: 0;
     top: 0;
@@ -38,7 +38,7 @@
     flex-direction: row;
     grid-gap: 3.3em;
   }
-  
+
   .image {
     border-radius: 50%;
     max-width: 300px;
@@ -52,11 +52,11 @@
     display: flex;
     flex-direction: column;
     grid-gap: 0.5em;
-    
+
     .greteen {
       position: relative;
       font-size: 1.5rem;
-    
+
       @include respond-above(xs) {
         font-size: 2rem;
       }
@@ -70,8 +70,13 @@
 
     .name {
       font-size: 4rem;
-      color: var(--color-primary);
-        
+      background: -webkit-linear-gradient(
+        var(--color-primary-light),
+        var(--color-primary)
+      );
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+
       @include respond-above(sm) {
         color: var(--color-primary-light);
         font-size: 5rem;
@@ -84,32 +89,32 @@
     }
 
     .skills {
-        min-height: 1em;
-        min-width: 10em;
-        font-size: 1.6rem;
+      min-height: 1em;
+      min-width: 10em;
+      font-size: 1.6rem;
 
-        @include respond-above(sm) {
-          font-size: 2.2rem;
-        }
+      @include respond-above(sm) {
+        font-size: 2.2rem;
+      }
     }
   }
 
   .download {
     align-self: flex-end;
-    color: var(--color-primary);
-    font-weight: 700;
     padding: 1em 2em;
-    border: 3px solid var(--color-primary);
+    margin-top: 0.5em;
+    font-weight: 700;
+    color: var(--color-primary-toggle);
+    text-transform: uppercase;
+    background-color: transparent;
+    border: 4px solid var(--color-primary-toggle);
     border-radius: 30px;
     transition: 0.3s ease;
-    background-color: transparent;
     cursor: pointer;
-    text-transform: uppercase;
-    margin-top: 0.5em;
 
     @include respond-above(sm) {
-      margin-top: 2em;
       position: absolute;
+      margin-top: 2em;
       bottom: 3.2em;
       left: 50%;
       transform: translateX(-50%);
