--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,45 +1,44 @@
 @import "src/styles/colors";
 @import "src/styles/breakpoints";
 
-  .section {
-    padding: 5em 1.5em 6em 1.5em;
-    background-color: var(--color-secondary-dark);
-
-    h2 {
-      padding: 0;
-      font-size: 3.6rem;
-      text-align: center;
-    }
+.section {
+  padding: 5em 1.5em 8em 1.5em;
+  background-color: var(--color-secondary-dark);
+  @include respond-above(sm) {
+    padding-bottom: 6em;
   }
 
-  .header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: var(--color-white);
-    margin-bottom: 4em;
-
-    h2 {
-      text-align: center;
-    }
+  h2 {
+    padding: 0;
+    font-size: 3.6rem;
+    text-align: center;
   }
+}
 
-  .links {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    max-width: min(90%, 30em);
-    margin: 0 auto;
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: var(--color-white);
+  margin-bottom: 4em;
+
+  h2 {
+    text-align: center;
   }
+}
 
-  .details {
-    transition: all 400ms ease-in-out;
+.links {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  max-width: min(90%, 30em);
+  margin: 0 auto;
+}
 
-    &:hover {
-      transform: translateY(5px);
-      
+.details {
+  transition: all 400ms ease-in-out;
 
-      
-    }
+  &:hover {
+    transform: translateY(5px);
   }
-
+}
