added amazona-2 with fix useTextInput

--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -1,96 +1,97 @@
-@import 'src/styles/colors';
-@import 'src/styles/breakpoints';
-@import 'src/styles/common';
+@import "src/styles/colors";
+@import "src/styles/breakpoints";
+@import "src/styles/common";
 
 .about {
+  display: flex;
+  min-height: 100vh;
+  padding: 4em 0;
+  position: relative;
+  background-color: var(--color-white);
+  scroll-snap-align: center;
+
+  @include respond-above(sm) {
+    padding: {
+      top: 8em;
+      bottom: 14em;
+    }
+  }
+
+  .info {
     display: flex;
-    min-height: 100vh;
-    padding: 4em 0;
-    position: relative;
-    background-color: var(--color-white);
+    flex-direction: column;
+    grid-gap: 1.6em;
+    padding-top: 2em;
 
-    @include respond-above(sm) {
-        padding: {
-            top: 8em;
-            bottom: 14em;
-        }
+    @include respond-above(xs) {
+      grid-gap: 2em;
+    }
+    @include respond-above(xs) {
+      grid-gap: 3em;
+    }
+    @include respond-above(lg) {
+      flex-direction: row;
+      justify-content: center;
+      padding-top: 4em;
+      grid-gap: 3em;
     }
 
-    .info {
-        display: flex;
-        flex-direction: column;
-        grid-gap: 1.6em;
-        padding-top: 2em;
+    .infoWrapper {
+      display: flex;
+      flex-direction: column;
+      grid-gap: 2em;
+      align-items: center;
+      justify-content: center;
 
-        @include respond-above(xs) {
-            grid-gap: 2em;
+      @include respond-above(sm) {
+        grid-gap: 2.3em;
+        align-items: flex-start;
+      }
+
+      .infoTitle {
+        font-size: 2rem;
+        font-weight: 700;
+        text-align: center;
+        color: var(--color-dark);
+
+        @include respond-above(sm) {
+          font-size: 2rem;
         }
-        @include respond-above(xs) {
-            grid-gap: 3em;
-        }
+
         @include respond-above(lg) {
-            flex-direction: row;
-            justify-content: center;
-            padding-top: 4em;
-            grid-gap: 3em;
+          font-size: 2.2rem;
         }
+      }
 
-        .infoWrapper {
-            display: flex;
-            flex-direction: column;
-            grid-gap: 2em;
-            align-items: center;
-            justify-content: center;
-
-            @include respond-above(sm) {
-                grid-gap: 2.3em;
-                align-items: flex-start;
-            }
-
-            .infoTitle {
-                font-size: 2rem;
-                font-weight: 700;
-                text-align: center;
-                color: var(--color-dark);
-
-                @include respond-above(sm) {
-                    font-size: 2rem;
-                }
-                
-                @include respond-above(lg) {
-                    font-size: 2.2rem;
-                }
-            }
-
-            .description {
-                max-width: 600px;
-                color: var(--color-dark);
-                font-weight: 500;
-                line-height: 1.5;
-                text-align: center;
-                @include respond-above(lg) {
-                    text-align: left;
-                }
-            }
+      .description {
+        max-width: 600px;
+        color: var(--color-dark);
+        font-weight: 500;
+        line-height: 1.5;
+        text-align: center;
+        @include respond-above(lg) {
+          text-align: left;
         }
-
-        .additionalInfo {
-            display: flex;
-            flex-direction: column;
-            grid-gap: 0.5em;
-
-            @include respond-above(xs) {
-                grid-gap: 1em;
-            }
-            @include respond-above(sm) {
-                grid-gap: 1.5em;
-            }
-            @include respond-above(lg) {
-                display: grid;
-                grid-template-columns: 1fr 1fr;
-                grid-row-gap: 1em;
-                grid-column-gap: 4em;
-            }
-        }
+      }
     }
+
+    .additionalInfo {
+      display: flex;
+      flex-direction: column;
+      grid-gap: 0.5em;
+
+      @include respond-above(xs) {
+        grid-gap: 1em;
+      }
+      @include respond-above(sm) {
+        grid-gap: 1.5em;
+      }
+      @include respond-above(lg) {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-row-gap: 1em;
+        grid-column-gap: 4em;
+      }
+    }
+  }
 }
