--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,10 +1,9 @@
-@import "src/styles/colors";
-@import "src/styles/breakpoints";
-@import "src/styles/common";
+@import 'src/styles/colors';
+@import 'src/styles/breakpoints';
+@import 'src/styles/common';
 
 .header {
-  height: 100vh;
-  width: 100%;
+  min-height: 100vh;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -13,14 +12,14 @@
   grid-gap: 3.2em;
 
   &::before {
-    content: "";
+    content: '';
     position: absolute;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     display: block;
-    background-image: url("/img/man.jpeg");
+    background-image: url('/img/man.jpeg');
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -129,7 +128,7 @@
 
     &:hover {
       color: var(--color-primary-dark);
-      border-color: var(--color-primar-darky);
+      border-color: var(--color-primary-dark);
     }
   }
 }
