--- a/src/components/Projects/ProjectCard/ProjectCard.module.scss
+++ b/src/components/Projects/ProjectCard/ProjectCard.module.scss
@@ -33,6 +33,8 @@
     color: var(--color-gray);
   }
   .additionalInfo {
+    max-width: 70%;
     margin-top: 0.25em;
+    text-align: center;
   }
 }
