--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,5 +1,5 @@
-@import "src/styles/colors";
-@import "src/styles/breakpoints";
+@import 'src/styles/colors';
+@import 'src/styles/breakpoints';
 
 .navbar {
   position: sticky;
@@ -7,11 +7,12 @@
   left: 0;
   width: 100%;
   height: 80px;
-  
+
   display: none;
   justify-content: center;
   align-items: center;
 
+  backdrop-filter: blur(0.7em);
   background-color: var(--background-navbar);
   z-index: 100;
   border-bottom: 1px solid var(--color-toggle-dark);
@@ -52,10 +53,9 @@
       }
     }
   }
-  
+
   .main-link {
     color: #fff;
     font-size: 1.6rem;
   }
 }
-
